--- a/src/main/webapp/formulaire_1.xhtml
+++ b/src/main/webapp/formulaire_1.xhtml
@@ -3,9 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html">
     <h:head>
-        <title>Formulaire</title>
+        <title>Application Formulaire 1</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h1>Application formulaire_1</h1>
+
+        <h:form>
+           <h:outputLabel value="Entrez un nombre" for="nombre"/>
+           <h:inputText id="nombre" value="#{bean.nombre}"/>
+           <h:message for="nombre"/>
+           <h:commandButton value="Valider" action="affichage_1"/>
+         </h:form>
+
     </h:body>
 </html>
