--- a/src/main/webapp/formulaire__4.xhtml
+++ b/src/main/webapp/formulaire__4.xhtml
@@ -7,11 +7,7 @@
     <body>
 
         <ui:composition template="./WEB-INF/Template/template_defaut.xhtml">
-
-            <ui:define name="top">
-                TP PRG > Exercice 4
-            </ui:define>
-
+            <ui:param name="titre" value="Exercice 4"/>
             <ui:define name="content">
                 <h1>Application formulaire__4</h1>
                 <h:form>
